--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "redux": "^4.2.1",
     "sass": "^1.59.3",
     "slick-carousel": "^1.8.1",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analize-build": "source-map-explorer build/static/js/*.js --html results.html",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
