--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "liga",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
@@ -12,6 +11,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-player": "^2.12.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
